--- a/src/styles/avatar.css
+++ b/src/styles/avatar.css
@@ -14,8 +14,8 @@
 @media (max-width: 700px) {
     .avatar.about {
         z-index: -5;
-        height: 81vh;
-        bottom: 0vh;
+        height: 90vh;
+        bottom: 0rem;
     }
 }
 
