--- a/src/styles/aboutMenu.css
+++ b/src/styles/aboutMenu.css
@@ -7,6 +7,15 @@
   transform: translateY(-60%);
   left: 10vw;
 }
+/*.menu {
+  width: 19rem;
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  top: 50%;
+  transform: translateY(-25%);
+  right: 15vw;
+}*/
 
 .item {
   height: 3.7rem;
@@ -209,12 +218,19 @@
 @media (max-width: 700px) {
   .sub-container {
     width: 20rem;
-    top: 44%;
+    top: 36%;
     left: 50%;
     transform: translateX(-50%);
   }
   .menu {
-    top: 20%;
+      width: 10rem;
+      top: 2.1rem;
+      left: 0rem;
+      right: 7rem;
+      transform: translateY(-0%);
+      /*transform: translateX(-100%);*/
+      float: right;
+      position: relative;
   }
   .title {
     font-size: 0.8rem;
@@ -256,5 +272,34 @@
   .education-link-container {
     display: flex;
     font-size: 0.7rem;
+  }
+
+  .item.active:nth-child(1){
+    background: linear-gradient(90deg, var(--jade), var(--transparent) 90%);
+  }
+  .item.active:nth-child(2){
+    background: linear-gradient(90deg, var(--purple), var(--transparent) 100%);
+  }
+  .item.active:nth-child(3){
+    background: linear-gradient(90deg, var(--blue), var(--transparent) 90%);
+  }
+  
+  .item:nth-child(1),
+  .item:nth-child(2),
+  .item:nth-child(3),
+  .item.active:nth-child(1),
+  .item.active:nth-child(2),
+  .item.active:nth-child(3) {
+    border-radius: var(--radius-left);
+  }
+  
+  .item:nth-child(1) {
+    background: linear-gradient(90deg, var(--jade-transparent), var(--transparent) 90%);
+  }
+  .item:nth-child(2) {
+    background: linear-gradient(90deg, var(--purple-transparent), var(--transparent) 100%);
+  }
+  .item:nth-child(3) {
+    background: linear-gradient(90deg, var(--blue-transparent), var(--transparent) 90%);
   }
 }
